@@ -5,7 +5,9 @@
 \title{Convert Philosopher (Fragpipe) output to MSstatsTMT format.}
 \usage{
 PhilosophertoMSstatsTMTFormat(
-  input_path,
+  input = NULL,
+  path = NULL,
+  folder = TRUE,
   annotation,
   protein_id_col = "ProteinAccessions",
   peptide_id_col = "PeptideSequence",
@@ -24,7 +26,12 @@ PhilosophertoMSstatsTMTFormat(
 )
 }
 \arguments{
-\item{input_path}{a path to the folder with all the Philosopher msstats csv files. Fragpipe produces a msstats.csv file for each TMT mixture.}
+\item{input}{list of tables exported by Philosopher. Fragpipe produces a csv file for each TMT mixture.}
+
+\item{path}{a path to the folder with all the Philosopher msstats csv files. Fragpipe produces a msstats.csv file for each TMT mixture.}
+
+\item{folder}{logical, if TRUE, path parameter will be treated as folder path and all msstats*.csv files will be imported. 
+If FALSE, path parameter will be treated as a vector of fixed file paths.}
 
 \item{annotation}{annotation with Run, Fraction, TechRepMixture, Mixture, Channel, 
 BioReplicate, Condition columns or a path to file. Refer to the example 'annotation' for the meaning of each column. Channel column should be 
